@@ -1,3 +1,9 @@
+Thu Apr 23 11:35:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_eval.c (rb_obj_instance_eval, rb_obj_instance_exec): allow
+	  symbols to just instance_eval/exec, execept for definition of
+	  singletons.  [ruby-core:68961] [Bug #11086]
+
 Thu Apr 23 10:01:36 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* lib/delegate.rb: fix a typo.
